#3 Bug on iPhone 5(S) with background

--- a/style/main.css
+++ b/style/main.css
@@ -16,7 +16,8 @@ a:not([name]) {
 	text-decoration: none;
 }
 #video-wrapper {
-	/* height: 100vh; */
+	height: 640px;
+	height: 100vh;
 	overflow: hidden;
 	position: relative;
 }
